Add editing for event details

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,3 +24,12 @@
     background: #4f46e5;
   }
 }
+
+/* Number input styling taken from https://stackoverflow.com/questions/71296535/how-to-remove-arrow-on-input-type-number-with-tailwind-css*/
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
